firebase connected with ios

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -59,7 +59,7 @@
 		<array>
 			<!-- TODO Replace this value: -->
 			<!-- Copied from GoogleService-Info.plist key REVERSED_CLIENT_ID -->
-			<string>com.googleusercontent.apps.346404043235-5du8dtjrldt981mveqqjr6alnb8gmdfg</string>
+			<string>com.googleusercontent.apps.1:557517649496:ios:5de95aef2c594925887c2d</string>
 		</array>
 	</dict>
 </array>
