--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -23,9 +23,9 @@ if (flutterVersionName == null) {
 }
 
 android {
+    ndkVersion "25.1.8937393"
     namespace "com.example.kanoony"
     compileSdkVersion 34
-    ndkVersion flutter.ndkVersion
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
@@ -41,7 +41,6 @@ android {
     }
 
     defaultConfig {
-       
         multiDexEnabled true
     
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
@@ -68,6 +67,7 @@ flutter {
 }
 
 dependencies {
-implementation 'com.google.android.material:material:1.5.0'
-  implementation 'com.stripe:stripe-android:17.1.1'
+    implementation 'com.google.android.material:material:1.5.0'
+    implementation 'com.stripe:stripe-android:17.1.1'
+    implementation 'com.android.support:multidex:2.0.1'
 }
