--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,7 +67,7 @@ dependencies:
   carousel_slider: ^4.2.1
   dropdown_button2: ^2.3.9
   flutter_gallery_3d: ^1.1.1
-  device_preview: ^1.2.0
+  # device_preview: 1.2.0
 
 
 flutter_icons:
